--- a/package.json
+++ b/package.json
@@ -19,4 +19,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
+  , "homepage": "https://connorthomascleary.com/websamples/gardenstarter/"
 }
